2001-08-30  Joseph S. Myers  <jsm28@cam.ac.uk>

	* phantasia/Makefrag: Use a stamp file for generating score files.
	* phantasia/.cvsignore: Update.

2001-08-29  Joseph S. Myers  <jsm28@cam.ac.uk>

	* worm/worm.c (main): Check for too small a screen size.
	(newpos): Fix off-by-one error preventing the prize from being
	placed on the top line.
	(process): Position score appropriately for different width
	screens.

	* worm/worm.c: Whitespace tweak.

	* worm/worm.c, worm/worm.6: Remove documented bug with long worm
	lengths, and improve handling of non-standard screen sizes.  From
	OpenBSD.

	* wargames/wargames: Allow - in game names.  Bug reported by Guus
	Sliepen <guus@sliepen.warande.net>.

	* wtf/acronyms: Add AIUI.  Suggestion from Adam Olsen
	<adamolsen@technologist.com>.

	* phantasia/Makefrag: Fix typo.

	* arithmetic/arithmetic.6, atc/atc.6.in, atc/list.c,
	backgammon/backgammon/backgammon.6,
	backgammon/teachgammon/teach.c, battlestar/battlestar.6,
	battlestar/com2.c, battlestar/parse.c, bcd/bcd.6,
	boggle/boggle/boggle.6, canfield/canfield/canfield.6.in,
	cribbage/cribbage.6.in, factor/factor.6, fish/fish.6,
	fortune/datfiles/fortunes, fortune/datfiles/fortunes2,
	fortune/datfiles/fortunes2-o.real, fortune/datfiles/netbsd,
	fortune/datfiles/startrek, fortune/fortune/fortune.6.in,
	fortune/fortune/fortune.c, fortune/strfile/strfile.c, hack/date.h,
	hack/def.func_tab.h, hack/def.monst.h, hack/def.objclass.h,
	hack/def.objects.h, hack/def.permonst.h, hack/extern.h,
	hack/hack.6.in, hack/hack.Decl.c, hack/hack.apply.c,
	hack/hack.bones.c, hack/hack.c, hack/hack.cmd.c, hack/hack.do.c,
	hack/hack.do_name.c, hack/hack.dog.c, hack/hack.eat.c,
	hack/hack.end.c, hack/hack.engrave.c, hack/hack.fight.c,
	hack/hack.h, hack/hack.invent.c, hack/hack.lev.c,
	hack/hack.main.c, hack/hack.makemon.c, hack/hack.mhitu.c,
	hack/hack.mklev.c, hack/hack.mkmaze.c, hack/hack.mkobj.c,
	hack/hack.mkshop.c, hack/hack.mon.c, hack/hack.monst.c,